--- a/k8s-installation/vagrant-ansible/ansible/roles/networking/defaults/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/networking/defaults/main.yml
@@ -1,3 +1,3 @@
-# Networking paths
-coredns_manifest: "{{ config_dir }}/coredns-deployment.yaml"
-kubectl_binary_dest: /usr/local/bin/kubectl
+dns_manifest_dest: /etc/kubernetes/{{ dns_plugin }}.yml
+dns_kubeconfig: "{{ config_dir }}/admin.kubeconfig"
+dns_service_ip: "{{ service_cidr | ipaddr('10') | default('10.96.0.10') }}"
