--- a/k8s-installation/vagrant-ansible/ansible/roles/networking/handlers/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/networking/handlers/main.yml
@@ -1,5 +1,7 @@
-- name: apply_coredns
-  ansible.builtin.command:
-    cmd: "kubectl --kubeconfig={{ config_dir }}/admin.kubeconfig apply -f {{ coredns_manifest }}"
-  changed_when: true
-  when: inventory_hostname == 'master1'
+- name: Restart kubelet for DNS
+  ansible.builtin.systemd:
+    name: kubelet
+    state: restarted
+  become: yes
+  when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
+  tags: networking
