--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/handlers/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/handlers/main.yml
@@ -1,9 +1,37 @@
 - name: Apply RBAC
   ansible.builtin.command:
-    cmd: "kubectl --kubeconfig={{ config_dir }}/admin.kubeconfig apply -f {{ rbac_config }}"
-  changed_when: true
+    cmd: kubectl --kubeconfig={{ hardening_kubeconfig }} apply -f {{ rbac_config }}
+  register: rbac_apply
+  changed_when: "'created' in rbac_apply.stdout or 'configured' in rbac_apply.stdout"
+  environment:
+    KUBECONFIG: "{{ hardening_kubeconfig }}"
+  when: inventory_hostname == 'master1'
+  tags: hardening
 
 - name: Apply network policy
   ansible.builtin.command:
-    cmd: "kubectl --kubeconfig={{ config_dir }}/admin.kubeconfig apply -f {{ network_policy }}"
-  changed_when: true
+    cmd: kubectl --kubeconfig={{ hardening_kubeconfig }} apply -f {{ network_policy }}
+  register: net_apply
+  changed_when: "'created' in net_apply.stdout or 'configured' in net_apply.stdout"
+  environment:
+    KUBECONFIG: "{{ hardening_kubeconfig }}"
+  when: inventory_hostname == 'master1' and cni_plugin == 'calico'
+  tags: hardening
+
+- name: Apply Pod Security Admission
+  ansible.builtin.command:
+    cmd: kubectl --kubeconfig={{ hardening_kubeconfig }} apply -f {{ pod_security_admission }}
+  register: psa_apply
+  changed_when: "'created' in psa_apply.stdout or 'configured' in psa_apply.stdout"
+  environment:
+    KUBECONFIG: "{{ hardening_kubeconfig }}"
+  when: inventory_hostname == 'master1'
+  tags: hardening
+
+- name: Restart kube-apiserver for audit
+  ansible.builtin.systemd:
+    name: kube-apiserver
+    state: restarted
+  become: yes
+  when: inventory_hostname in groups['masters']
+  tags: hardening
