--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/main.yml
@@ -1,14 +1,17 @@
 - name: Remove bootstrap tokens
-  include_tasks: remove_bootstrap.yml
+  include_tasks: remove-bootstrap.yml
 
 - name: Configure audit policy
-  include_tasks: configure_audit.yml
+  include_tasks: configure-audit.yml
 
 - name: Configure network policies
-  include_tasks: network_policies.yml
+  include_tasks: network-policies.yml
 
 - name: Configure RBAC
-  include_tasks: configure_rbac.yml
+  include_tasks: configure-rbac.yml
+
+- name: Configure Pod Security Admission
+  include_tasks: configure-psa.yml
 
 - name: Configure etcd backup
-  include_tasks: etcd_backup.yml
+  include_tasks: etcd-backup.yml
