--- a/k8s-installation/vagrant-ansible/ansible/playbooks/distribute-artifacts.yml
+++ b/k8s-installation/vagrant-ansible/ansible/playbooks/distribute-artifacts.yml
@@ -1,5 +1,5 @@
-- name: Distribute certificates to all nodes
+- name: Distribute certificates and binaries to all nodes
   hosts: all:!jumpboxes
   become: yes
   roles:
-    - certificates-artifacts
+    - distribute-artifacts
