--- a/k8s-installation/vagrant-ansible/ansible/roles/cni/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/cni/meta/main.yml
@@ -1,1 +1,8 @@
-dependencies: []
+dependencies:
+  - distribute-artifacts
+  - control-plane
+galaxy_info:
+  role_name: cni
+  author: David Essien
+  description: Deploy CNI plugin (Flannel or Calico) for pod networking
+  license: MIT
